--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -78,7 +78,7 @@ textarea {
   resize: vertical;
 }
 
-label {
+label { /* Like Heading Font Color */
   display: block;
   margin-bottom: .5rem;
   font-size: .875rem;
@@ -86,7 +86,7 @@ label {
   color: #ffffff;
 }
 
-.list-group-item {
+.list-group-item { /* Styling, Branding, System Settings, FAQs, User Form, Account Settigns Tab Switch */
   background-color: #2a2a2a;
   border: 1px solid #333;
   color: #e0e0e0;
@@ -148,7 +148,7 @@ label {
   display: block;
   width: 100%;
   height: 40px;
-  margin-bottom: .5rem;
+  margin-bottom: -.8rem;
 }
 
 .color-settings-container {
@@ -160,14 +160,15 @@ label {
 .settings-group {
   display: flex;
   flex-direction: column;
+  margin-bottom: .8rem;
 }
 
 .settings-group label {
-  margin-bottom: 5px;
+  margin-bottom: .3rem;
 }
 
 /* Branding Section */
-#branding-section .preview-box {
+#branding-section .preview-box { /* displays the logo, icon, and font preview */
   width: 100%;
   height: 100px;
   border: 1px solid #ccc;
@@ -178,13 +179,6 @@ label {
   align-items: center;
   background-color: #1a1a1a;
   margin-bottom: 10px;
-}
-
-#branding-section #currentLogo, 
-#branding-section #selected-icon {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
 }
 
 #branding-section #font-preview .preview-large {
@@ -199,8 +193,6 @@ label {
   position: relative;
   display: inline-block;
   width: 100%;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 #branding-section .custom-file-input {
@@ -211,8 +203,11 @@ label {
   margin: 0;
   opacity: 0;
 }
+#branding-section .custom-file.mt-2 {
+  margin-top: 0px !important; /* Adjust the margin value as needed */
+}
 
-#branding-section .custom-file-label {
+#branding-section .custom-file-label { /* Styling for box part of choose file */
   position: absolute;
   top: 0;
   right: 0;
@@ -228,7 +223,7 @@ label {
   border-radius: 0.25rem;
 }
 
-#branding-section .custom-file-label::after {
+#branding-section .custom-file-label::after { /* Styling for browse part of choose file */
   position: absolute;
   top: 0;
   right: 0;
@@ -286,13 +281,6 @@ label {
 
 
 /* User Form Section */
-#user-form .card-body {
-  padding-top: 1.25rem;
-}
-
-#user-form .settings-container {
-  margin-top: 0;
-}
 
 /* Shared styles for custom switches */
 .switch-container {
@@ -361,29 +349,25 @@ input:checked + .slider:before {
 }
 
 /* Select2 Styling */
+/* For the drop down boxes on branding page */
+
+/* Override Select2 container width and height */
 .select2-container {
   width: 100% !important;
 }
 
 .select2-container--default .select2-selection--single {
-  background-color: #3a3a3a;
-  border: 1px solid #555;
-  border-radius: 4px;
-  height: 50px;
-  line-height: 50px;
+  width: 100%;
+  height: 33px; /* Set your desired height */
+  background-color: #ffffff; /* Custom background color */
+  border: 1px solid #555; /* Custom border color */
+  border-radius: 4px; /* Custom border radius */
 }
 
-.select2-container--default .select2-selection--single .select2-selection__rendered {
+/* Highlight selected option */
+.select2-results__option--highlighted[aria-selected] {
+  background-color: #444;
   color: #ffffff;
-  line-height: 50px;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow {
-  height: 48px;
-}
-
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-  border-color: #ffffff transparent transparent transparent;
 }
 
 .font-select-dropdown .select2-results__option,
@@ -394,27 +378,6 @@ input:checked + .slider:before {
   color: #ffffff;
 }
 
-.font-select-dropdown .select2-results__option[aria-selected=true],
-.icon-select-dropdown .select2-results__option[aria-selected=true] {
-  background-color: #4a4a4a;
-}
-
-.font-select-dropdown .select2-results__option--highlighted[aria-selected],
-.icon-select-dropdown .select2-results__option--highlighted[aria-selected] {
-  background-color: #5a5a5a;
-  color: #ffffff;
-}
-
-.icon-select-dropdown .select2-results__option {
-  display: flex;
-  align-items: center;
-}
-
-.icon-select-dropdown .select2-results__option img {
-  width: 30px;
-  height: 30px;
-  margin-right: 10px;
-}
 
 /* Responsive Design */
 @media (max-width: 768px) {
@@ -434,11 +397,11 @@ input:checked + .slider:before {
 
   .temperature-label-container {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: .8rem;
   }
 
   .settings-button-container {
-    margin-top: 20px;
+    margin-top: 1.5rem;
   }
 
   .save-settings-button {
